# tucha

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/tucha-client/: Cargo.toml
crates/tucha-client/src/: app.rs  main.rs
crates/tucha-client/src/audio/: capture.rs  codec.rs  devices.rs  mod.rs  playback.rs
crates/tucha-client/src/network/: audio_stream.rs  mod.rs  signaling.rs
crates/tucha-client/src/ui/: connect.rs  devices.rs  main_view.rs  mod.rs  widgets.rs
crates/tucha-proto/: Cargo.toml
crates/tucha-proto/src/: codec.rs  lib.rs  msg.rs  packet.rs
crates/tucha-server/: Cargo.toml
crates/tucha-server/src/: main.rs  relay.rs  rooms.rs  session.rs
