[workspace]
members = [
    "crates/tucha-proto",
    "crates/tucha-server",
    "crates/tucha-client",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
bincode     = { version = "2", features = ["serde"] }
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes       = "1"
