[package]
name    = "tucha-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tucha-server"
path = "src/main.rs"

[dependencies]
tucha-proto = { path = "../tucha-proto" }
tokio       = { workspace = true }
serde       = { workspace = true }
bincode     = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
bytes       = { workspace = true }
dashmap     = "6"
